--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -64,11 +64,11 @@
     height: 37px;
     border-radius: 20px;
     border: none;
-    background: #00bd7a;
+    background: #00b0bd;
     font: normal normal bold 20px/25px Poppins;
     color: #121212;
     margin: 15px 0;
-    box-shadow: 0 0 5px #00bd7a;
+    box-shadow: 0 0 5px #0091bd;
 }
 
 .download-content {
